Search on Enter and z-index fix

--- a/src/app/components/bookcard/bookcard.component.scss
+++ b/src/app/components/bookcard/bookcard.component.scss
@@ -26,7 +26,7 @@
         mat-expansion-panel {
             position: relative;
             background-color: $bg-color-light;
-            z-index: 10;
+            z-index: 2;
         
             mat-expansion-panel-header {
                 height: fit-content;
